# admla_a3_25731542api

./: Dockerfile  README.md  github.txt  pyproject.toml  requirements.txt
app/: main.py
models/: LinearRegression_ethereum_nextday_20251030_0536.pkl
