[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "admla_a3_25731542api"
version = "1.0.0"
description = "FastAPI app for Ethereum next-day high prediction"
authors = [{ name="Rohan Chaudhary", email="rohan.chaudhary@student.uts.edu.au" }]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.1",
    "joblib==1.4.2"
]
